--- a/styles.css
+++ b/styles.css
@@ -224,13 +224,14 @@ a {
   width: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   gap: 20px;
-  text-align: center; 
+  text-align: left;
   padding-left: 50px;
   padding-right: 50px;
 }
+
 
 .column2 {
   width: auto;
@@ -250,6 +251,7 @@ a {
   font-weight: 900;
   grid-column: 1;
   grid-row: 1; 
+  align-items: left;
 }
 
 .button {
