--- a/styles.css
+++ b/styles.css
@@ -254,21 +254,6 @@ a {
   align-items: left;
 }
 
-.button {
-  width: 131px;
-  height: 39px;
-  flex-shrink: 0;
-  border-radius: 100px;
-  background: #FFF;
-  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.10);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 20px;
-  grid-column: 1;
-  grid-row: 2;
-}
-
 .button a {
   text-decoration: none;
   color: #000;
@@ -437,6 +422,14 @@ img {
   display: flex;
   justify-content: center;
   margin-top: 8rem;
+  color: rgba(0, 0, 0, 0.80);
+text-align: center;
+font-family: Frank Ruhl Libre;
+font-size: 45px;
+font-style: normal;
+font-weight: 900;
+line-height: 100%; /* 45px */
+letter-spacing: -0.9px;
 }
 
 .text1{
