--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Frank Ruhl Libre', sans-serif;
+  font-family: sans-serif;
   margin-bottom: 10px;
 }
 
@@ -120,7 +120,7 @@ p {
   padding: 50px;
   display: flex;
   flex-direction: column;
-  font-family: 'Fira Sans', Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 
 .item1 {
